Added spring security authentication
Signed-off-by: SinghShubham1308 <shubhusingh1308@gmail.com>